--- a/html-files/2022-11-21.html
+++ b/html-files/2022-11-21.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>2022-11-21 Happy weekend</title>
   </head>
   <body>
-    <h1>Happy weekend projektas</h1>
-    <a href="https://www.youtube.com/watch?v=q3l-gsidBRw" target="_blank"
-      >Youtube video part 1</a
-    >
-    <br />
-    <a href="https://www.youtube.com/watch?v=xytl7QNo8fc" target="_blank"
-      >Youtube video part 2</a
-    >
+    <main>
+      <h1>Happy weekend projektas</h1>
+      <a href="https://www.youtube.com/watch?v=q3l-gsidBRw" target="_blank"
+        >Youtube video part 1</a
+      >
+      <br />
+      <a href="https://www.youtube.com/watch?v=xytl7QNo8fc" target="_blank"
+        >Youtube video part 2</a
+      >
+      <p>
+        <span class="code">File -- Add local repository </span> or
+        <span class="code"
+          >Current repository -- arrow -- Add -- Add existing repository</span
+        >
+        adds local repo to the list of repos on
+        <span class="tech">GitHub Desktop</span>
+      </p>
+    </main>
   </body>
 </html>
