--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -10,6 +10,9 @@
   <body>
     <main>
       <h1>Happy weekend projektas</h1>
+      <h2>
+        2022-11-21 - creating branches, managing issues and project tables
+      </h2>
       <a href="https://www.youtube.com/watch?v=q3l-gsidBRw" target="_blank"
         >Youtube video part 1</a
       >
@@ -23,8 +26,15 @@
           >Current repository -- arrow -- Add -- Add existing repository</span
         >
         adds local repo to the list of repos on
-        <span class="tech">GitHub Desktop</span>
+        <span class="tech">GitHub Desktop</span>. You can publish repo through
+        <span class="tech">GitHub Desktop</span> .
       </p>
+      <h2>2022-11-22</h2>
+      <a href="" target="_blank">Youtube video part 1</a>
+      <br />
+      <a href="" target="_blank">Youtube video part 2</a>
+      <!-- 2022-11-22 -->
+      <p></p>
     </main>
   </body>
 </html>
