--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <ul>
-      <li><a href="./html-files/2022-11-21.html">2022-11-21 pamoka</a></li>
+      <li>
+        <a href="./html-files/week-02.html">WEEK 02 </a>
+      </li>
     </ul>
   </body>
 </html>
