--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -5,18 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
-    <title>2022-11-21 Happy weekend</title>
+    <title>WEEK 02</title>
   </head>
   <body>
     <main>
-      <h1>Happy weekend projektas</h1>
+      <!-- 2022-11-21 -->
+      <h1>
+        <a
+          href="https://github.com/front-end-by-rimantas/41-grupe-happy-weekend"
+          >Happy weekend project</a
+        >
+      </h1>
+      <a href="https://www.youtube.com/@RimantasBelovas/videos"
+        >ALL YOUTUBE VIDEOS</a
+      >
+      <a href="https://github.com/JurgitaE/03-happy-weekend"
+        >Personal Repo for the project</a
+      >
+
       <h2>
         2022-11-21 - creating branches, managing issues and project tables
       </h2>
       <a href="https://www.youtube.com/watch?v=q3l-gsidBRw" target="_blank"
         >Youtube video part 1</a
       >
-      <br />
+
       <a href="https://www.youtube.com/watch?v=xytl7QNo8fc" target="_blank"
         >Youtube video part 2</a
       >
@@ -29,12 +42,32 @@
         <span class="tech">GitHub Desktop</span>. You can publish repo through
         <span class="tech">GitHub Desktop</span> .
       </p>
-      <h2>2022-11-22</h2>
-      <a href="" target="_blank">Youtube video part 1</a>
-      <br />
-      <a href="" target="_blank">Youtube video part 2</a>
+
       <!-- 2022-11-22 -->
-      <p></p>
+      <h2>2022-11-22 - working with branches, issues and design</h2>
+      <a href="https://www.youtube.com/watch?v=KCg_lAy1gmU" target="_blank"
+        >Youtube video part 1</a
+      >
+
+      <a href="" target="_blank">Youtube video part 2</a>
+
+      <p>
+        You can delete a branch directly in
+        <span class="tech">GitHub Desktop</span>, because if the delete is made
+        in GitHub (<span class="code">Branch -- Delete...</span> ), you will
+        have to delete it on <span class="tech">GitHub Desktop</span> anyway.
+        Connecting issue to a branch: in commit message add issue number
+        (e.g.#2).
+
+        <a href="https://realfavicongenerator.net/">Favicon generator link</a>
+
+        Homework readings:
+        <a href=" https://www.w3schools.com/csSref/css_selectors.php"
+          >CSS selectors</a
+        >
+      </p>
+      <!-- 2022-11-23 -->
+      <h2>2022-11-23</h2>
     </main>
   </body>
 </html>
