--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="../favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="../favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="../favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="../favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="../favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>WEEK 02</title>
   </head>
@@ -60,7 +84,8 @@
         (e.g.#2).
 
         <a href="https://realfavicongenerator.net/">Favicon generator link</a>
-
+        <span class="code">Ctrl + Shift + i</span> - invert selection in
+        <span class="tech">paint.net</span>
         Homework readings:
         <a href=" https://www.w3schools.com/csSref/css_selectors.php"
           >CSS selectors</a
