unnecessary img removal

--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -73,7 +73,9 @@
         >Youtube video part 1</a
       >
 
-      <a href="" target="_blank">Youtube video part 2</a>
+      <a href="https://www.youtube.com/watch?v=68ZU-Smunn0" target="_blank"
+        >Youtube video part 2</a
+      >
 
       <p>
         You can delete a branch directly in
