--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -37,13 +37,14 @@
       <h1>
         <a
           href="https://github.com/front-end-by-rimantas/41-grupe-happy-weekend"
+          target="_blank"
           >Happy weekend project</a
         >
       </h1>
-      <a href="https://www.youtube.com/@RimantasBelovas/videos"
+      <a href="https://www.youtube.com/@RimantasBelovas/videos" target="_blank"
         >ALL YOUTUBE VIDEOS</a
       >
-      <a href="https://github.com/JurgitaE/03-happy-weekend"
+      <a href="https://github.com/JurgitaE/03-happy-weekend" target="_blank"
         >Personal Repo for the project</a
       >
 
@@ -87,7 +88,7 @@
 
         <a href="https://realfavicongenerator.net/">Favicon generator link</a>
         <span class="code">Ctrl + Shift + i</span> - invert selection in
-        <span class="tech">paint.net</span>
+        <span class="tech">paint.net</span> <br />
         Homework readings:
         <a href=" https://www.w3schools.com/csSref/css_selectors.php"
           >CSS selectors</a
