--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -86,11 +86,28 @@
         Connecting issue to a branch: in commit message add issue number
         (e.g.#2).
 
-        <a href="https://realfavicongenerator.net/">Favicon generator link</a>
+        <a href="https://realfavicongenerator.net/" target="_blank"
+          >Favicon generator link</a
+        >
         <span class="code">Ctrl + Shift + i</span> - invert selection in
         <span class="tech">paint.net</span> <br />
+
+        <span class="tech"> CSS</span>:
+        <span class="code"> margin: calc((100% - elWpx) / 2)</span> centers
+        element. <br />
+        <span class="tech"> CSS</span>:
+        <span class="code"> selector:first-child {} </span> selects element that
+        is the first child of its parent. <br />
+        <span class="tech"> CSS</span>:
+        <span class="code"> element>element </span> selects all elements where
+        the parent is the first element. <br />
+
+        <!-- <div><span class="code">margin: calc((100% - ElWidthpx) / 2)</span> center element</div>  -->
+        <br />
         Homework readings:
-        <a href=" https://www.w3schools.com/csSref/css_selectors.php"
+        <a
+          href=" https://www.w3schools.com/csSref/css_selectors.php"
+          target="_blank"
           >CSS selectors</a
         >
       </p>
