--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <title>Paskaitu konspektai</title>
   </head>
   <body>
+    <h1>
+      <a href="https://github.com/JurgitaE/lesson-notes" target="_blank"
+        >Notes repo</a
+      >
+    </h1>
     <ul>
       <li>
         <a href="./html-files/week-02.html">WEEK 02 </a>
