--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
   </head>
   <body>
     <h1>
-      <a href="https://github.com/JurgitaE/lesson-notes" target="_blank"
-        >Notes repo</a
+      Tautvydo pageidavimu:
+      <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
+        Notes repo</a
       >
     </h1>
     <ul>
