--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <h1>
-      Tautvydo pageidavimu:
+      Tautvydo pageidavimu 😄:
       <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
         Notes repo</a
       >
