--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
       href="./favicon/safari-pinned-tab.svg"
       color="#5bbad5"
     />
+    <link rel="stylesheet" href="main.css" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
-    <title>Paskaitu konspektai</title>
+    <title>Class Notes</title>
   </head>
   <body>
     <h1>
-      Tautvydo pageidavimu 😄:
       <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
-        Notes repo</a
+        Notes-repo</a
       >
     </h1>
+    <sup>* Tautvydo Ž. pageidavimu 😄</sup>
     <ul>
       <li>
         <a href="./html-files/week-02.html">WEEK 02 </a>
