--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -89,7 +89,7 @@
         <a href="https://realfavicongenerator.net/" target="_blank"
           >Favicon generator link</a
         >
-        <span class="code">Ctrl + Shift + i</span> - invert selection in
+        <span class="code">Ctrl + i</span> - invert selection in
         <span class="tech">paint.net</span> <br />
 
         <span class="tech"> CSS</span>:
