--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -8,20 +8,17 @@
         <link
             rel="apple-touch-icon"
             sizes="180x180"
-            href="../favicon/apple-touch-icon.png"
-        />
+            href="../favicon/apple-touch-icon.png" />
         <link
             rel="icon"
             type="image/png"
             sizes="32x32"
-            href="../favicon/favicon-32x32.png"
-        />
+            href="../favicon/favicon-32x32.png" />
         <link
             rel="icon"
             type="image/png"
             sizes="16x16"
-            href="../favicon/favicon-16x16.png"
-        />
+            href="../favicon/favicon-16x16.png" />
         <link rel="manifest" href="../favicon/site.webmanifest" />
         <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5" />
         <link rel="stylesheet" href="./style.css" />
@@ -29,48 +26,69 @@
     </head>
     <body>
         <main>
-            <!-- 2022-11-21 -->
-            <h1>
+            <header>
+                <h1>
+                    <a
+                        href="https://github.com/front-end-by-rimantas/41-grupe-happy-weekend"
+                        target="_blank">
+                        Happy weekend project
+                    </a>
+                </h1>
+                <a href="https://www.youtube.com/@RimantasBelovas/videos" target="_blank">
+                    ALL YOUTUBE VIDEOS
+                </a>
                 <a
-                    href="https://github.com/front-end-by-rimantas/41-grupe-happy-weekend"
+                    href="https://github.com/JurgitaE/03-happy-weekend"
                     target="_blank"
-                    >Happy weekend project</a
-                >
-            </h1>
-            <a href="https://www.youtube.com/@RimantasBelovas/videos" target="_blank"
-                >ALL YOUTUBE VIDEOS</a
-            >
-            <a href="https://github.com/JurgitaE/03-happy-weekend" target="_blank"
-                >Personal Repo for the project</a
-            >
+                    class="youtube">
+                    Personal Repo for the project
+                </a>
+            </header>
 
-            <h2>2022-11-21 - creating branches, managing issues and project tables</h2>
-            <a href="https://www.youtube.com/watch?v=q3l-gsidBRw" target="_blank"
-                >Youtube video part 1</a
-            >
+            <!-- 2022-11-21 -->
+            <div class="day">
+                <h2>2022-11-21 - Issues, project tables, branches, favicon</h2>
+                <a
+                    href="https://www.youtube.com/watch?v=q3l-gsidBRw"
+                    target="_blank"
+                    class="youtube">
+                    Youtube video part 1
+                </a>
 
-            <a href="https://www.youtube.com/watch?v=xytl7QNo8fc" target="_blank"
-                >Youtube video part 2</a
-            >
-            <p>
-                <span class="code">File -- Add local repository </span> or
-                <span class="code"
-                    >Current repository -- arrow -- Add -- Add existing repository</span
-                >
-                adds local repo to the list of repos on
-                <span class="tech">GitHub Desktop</span>. You can publish repo through
-                <span class="tech">GitHub Desktop</span> .
-            </p>
+                <a
+                    href="https://www.youtube.com/watch?v=xytl7QNo8fc"
+                    target="_blank"
+                    class="youtube"
+                    >Youtube video part 2
+                </a>
+                <p>
+                    <span class="code">File -- Add local repository </span> or
+                    <span class="code"
+                        >Current repository -- arrow -- Add -- Add existing repository
+                    </span>
+                    adds local repo to the list of repos on
+                    <span class="tech">GitHub Desktop</span>. You can publish repo through
+                    <span class="tech">GitHub Desktop</span> .
+                </p>
+                <p>
+                    When creating comment file, use md (MarkDown) file format(e.g.
+                    comment.md).
+                </p>
+                <p>
+                    PROJECT board should be created beforehand ISSUES so that issues are
+                    attached to the project board automatically.
+                </p>
+            </div>
 
             <!-- 2022-11-22 -->
             <h2>2022-11-22 - working with branches, issues and design</h2>
             <a href="https://www.youtube.com/watch?v=KCg_lAy1gmU" target="_blank"
-                >Youtube video part 1</a
-            >
+                >Youtube video part 1
+            </a>
 
             <a href="https://www.youtube.com/watch?v=68ZU-Smunn0" target="_blank"
-                >Youtube video part 2</a
-            >
+                >Youtube video part 2
+            </a>
 
             <p>
                 You can delete a branch directly in
@@ -81,8 +99,8 @@
                 branch: in commit message add issue number (e.g.#2).
 
                 <a href="https://realfavicongenerator.net/" target="_blank"
-                    >Favicon generator link</a
-                >
+                    >Favicon generator link
+                </a>
                 <span class="code">Ctrl + i</span> - invert selection in
                 <span class="tech">paint.net</span> <br />
 
@@ -102,8 +120,8 @@
                 <a
                     href=" https://www.w3schools.com/csSref/css_selectors.php"
                     target="_blank"
-                    >CSS selectors</a
-                >
+                    >CSS selectors
+                </a>
             </p>
             <!-- 2022-11-23 -->
             <h2>2022-11-23</h2>
@@ -112,8 +130,8 @@
                     >Youtube video part 1</a
                 >
                 <a href="https://www.youtube.com/watch?v=1u9Crr9MxEA" target="_blank"
-                    >Youtube video part 2</a
-                >
+                    >Youtube video part 2
+                </a>
                 <p>Useful links:</p>
                 <ul>
                     <li>
@@ -123,9 +141,9 @@
                         - only css and font folders needed.
                     </li>
                     <li>
-                        <a lass="inline" href="https://github.com/marketplace/imgbot"
-                            >Imgbot</a
-                        >
+                        <a lass="inline" href="https://github.com/marketplace/imgbot">
+                            Imgbot
+                        </a>
                     </li>
                 </ul>
                 <p>
@@ -136,6 +154,12 @@
                 <!-- 2022-11-24 -->
                 <div>
                     <h2>2022-11-23</h2>
+                    <a href="https://www.youtube.com/watch?v=UYpCK1QN06w" target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=wZG16b3Ql8s" target="_blank"
+                        >Youtube video part 2</a
+                    >
                     <p>
                         Changing <span class="tech">package.json</span> author and licence
                         defaults:
@@ -143,7 +167,7 @@
                             class="inline"
                             href="https://jaketrent.com/post/change-default-npm-license/"
                             >Change Default NPM License</a
-                        >
+                        >.
                     </p>
                 </div>
 
