--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -78,6 +78,17 @@
                     PROJECT board should be created beforehand ISSUES so that issues are
                     attached to the project board automatically.
                 </p>
+                <div class="example">
+                    <p>Possible Issues:</p>
+                    <ol>
+                        <li>README</li>
+                        <li>Images</li>
+                        <li>Favicon</li>
+                        <li>Main layout</li>
+                        <li>Header</li>
+                        <li>Main content</li>
+                    </ol>
+                </div>
             </div>
 
             <!-- 2022-11-22 -->
