--- a/html-files/week-02.html
+++ b/html-files/week-02.html
@@ -37,10 +37,7 @@
                 <a href="https://www.youtube.com/@RimantasBelovas/videos" target="_blank">
                     ALL YOUTUBE VIDEOS
                 </a>
-                <a
-                    href="https://github.com/JurgitaE/03-happy-weekend"
-                    target="_blank"
-                    class="youtube">
+                <a href="https://github.com/JurgitaE/03-happy-weekend" target="_blank">
                     Personal Repo for the project
                 </a>
             </header>
