--- a/index.html
+++ b/index.html
@@ -1,49 +1,201 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="./favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="./favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="./favicon/site.webmanifest" />
-    <link
-      rel="mask-icon"
-      href="./favicon/safari-pinned-tab.svg"
-      color="#5bbad5"
-    />
-    <link rel="stylesheet" href="main.css" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-    <title>Class Notes</title>
-  </head>
-  <body>
-    <h1>
-      <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
-        Notes-repo</a
-      >
-    </h1>
-    <sup>* Tautvydo Ž. pageidavimu 😄</sup>
-    <ul>
-      <li>
-        <a href="./html-files/week-02.html">WEEK 02 </a>
-      </li>
-    </ul>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./favicon/apple-touch-icon.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./favicon/favicon-32x32.png" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./favicon/favicon-16x16.png" />
+        <link rel="manifest" href="./favicon/site.webmanifest" />
+        <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5" />
+        <link rel="stylesheet" href="./css/style.css" />
+        <title>WEEK 02</title>
+    </head>
+    <body>
+        <nav class="main-navigation">
+            <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
+                Site-Repo
+            </a>
+            <a href="https://www.youtube.com/@RimantasBelovas/videos" target="_blank">
+                Class Video
+            </a>
+        </nav>
+        <main>
+            <header>
+                <h1>
+                    <a
+                        href="https://github.com/front-end-by-rimantas/41-grupe-happy-weekend"
+                        target="_blank"
+                        id="happy-weekend">
+                        Happy weekend project
+                    </a>
+                </h1>
+
+                <a href="https://github.com/JurgitaE/03-happy-weekend" target="_blank">
+                    Personal Repo for the project
+                </a>
+            </header>
+
+            <!-- 2022-11-21 -->
+            <div class="day">
+                <h2>2022-11-21 - Issues, project tables, branches, favicon</h2>
+                <a
+                    href="https://www.youtube.com/watch?v=q3l-gsidBRw"
+                    target="_blank"
+                    class="youtube">
+                    Youtube video part 1
+                </a>
+                <a
+                    href="https://www.youtube.com/watch?v=xytl7QNo8fc"
+                    target="_blank"
+                    class="youtube"
+                    >Youtube video part 2
+                </a>
+                <p>
+                    <span class="code">File -- Add local repository </span> or
+                    <span class="code"
+                        >Current repository -- arrow -- Add -- Add existing repository
+                    </span>
+                    adds local repo to the list of repos on
+                    <span class="tech">GitHub Desktop</span>. You can publish repo through
+                    <span class="tech">GitHub Desktop</span> .
+                </p>
+                <p>
+                    When creating comment file, use md (MarkDown) file format(e.g.
+                    comment.md).
+                </p>
+                <p>
+                    PROJECT board should be created beforehand ISSUES so that issues are
+                    attached to the project board automatically.
+                </p>
+                <div class="example">
+                    <p>Possible Issues:</p>
+                    <ol>
+                        <li>README</li>
+                        <li>Images</li>
+                        <li>Favicon</li>
+                        <li>Main layout</li>
+                        <li>Header</li>
+                        <li>Main content</li>
+                    </ol>
+                </div>
+                <p>
+                    Common brach structure: <strong>master -- develop -- issue</strong> .
+                </p>
+            </div>
+
+            <!-- 2022-11-22 -->
+            <div class="day">
+                <h2>2022-11-22 - working with branches, issues and design</h2>
+                <a
+                    href="https://www.youtube.com/watch?v=KCg_lAy1gmU"
+                    target="_blank"
+                    class="youtube">
+                    Youtube video part 1
+                </a>
+                <a
+                    href="https://www.youtube.com/watch?v=68ZU-Smunn0"
+                    target="_blank"
+                    class="youtube">
+                    Youtube video part 2
+                </a>
+                <p>
+                    You can delete a branch directly in
+                    <span class="tech">GitHub Desktop</span>, because if the delete is
+                    made in GitHub (<span class="code">Branch -- Delete...</span>
+                    ), you will have to delete it on
+                    <span class="tech">GitHub Desktop</span> anyway. Connecting issue to a
+                    branch: in commit message add issue number (e.g.#2).
+
+                    <a href="https://realfavicongenerator.net/" target="_blank"
+                        >Favicon generator link
+                    </a>
+                    <span class="code">Ctrl + i</span> - invert selection in
+                    <span class="tech">paint.net</span> <br />
+
+                    <span class="tech"> CSS</span>:
+                    <span class="code"> margin: calc((100% - elWpx) / 2)</span>
+                    centers element. <br />
+                    <span class="tech"> CSS</span>:
+                    <span class="code"> selector:first-child {} </span> selects element
+                    that is the first child of its parent. <br />
+                    <span class="tech"> CSS</span>:
+                    <span class="code"> element>element </span> selects all elements where
+                    the parent is the first element. <br />
+
+                    <!-- <div><span class="code">margin: calc((100% - ElWidthpx) / 2)</span> center element</div>  -->
+                    <br />
+                    Homework readings:
+                    <a
+                        href=" https://www.w3schools.com/csSref/css_selectors.php"
+                        target="_blank"
+                        >CSS selectors
+                    </a>
+                </p>
+            </div>
+            <!-- 2022-11-23 -->
+            <h2>2022-11-23</h2>
+            <div>
+                <a href="https://www.youtube.com/watch?v=Hr40BLgOxGw" target="_blank"
+                    >Youtube video part 1</a
+                >
+                <a href="https://www.youtube.com/watch?v=1u9Crr9MxEA" target="_blank"
+                    >Youtube video part 2
+                </a>
+                <p>Useful links:</p>
+                <ul>
+                    <li>
+                        <a class="inline" href="https://fontawesome.com/v4/get-started/"
+                            >Font Awesome</a
+                        >
+                        - only css and font folders needed.
+                    </li>
+                    <li>
+                        <a lass="inline" href="https://github.com/marketplace/imgbot">
+                            Imgbot
+                        </a>
+                    </li>
+                </ul>
+                <p>
+                    NOTES: <br />
+                    You can find actual font-family font applied by selecting an element
+                    and going to Computed styles (bottom line 'Rendered Fonts').
+                </p>
+                <!-- 2022-11-24 -->
+                <div>
+                    <h2>2022-11-23</h2>
+                    <a href="https://www.youtube.com/watch?v=UYpCK1QN06w" target="_blank"
+                        >Youtube video part 1
+                    </a>
+                    <a href="https://www.youtube.com/watch?v=wZG16b3Ql8s" target="_blank"
+                        >Youtube video part 2</a
+                    >
+                    <p>
+                        Changing <span class="tech">package.json</span> author and licence
+                        defaults:
+                        <a
+                            class="inline"
+                            href="https://jaketrent.com/post/change-default-npm-license/"
+                            >Change Default NPM License</a
+                        >.
+                    </p>
+                </div>
+
+                <p></p>
+            </div>
+        </main>
+    </body>
 </html>
