--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </head>
     <body>
         <nav class="main-navigation">
+            <a href="#happy-weekend">Happy weekend</a>
             <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
                 Site-Repo
             </a>
