--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
                 <p>
                     Common brach structure: <strong>master -- develop -- issue</strong> .
                 </p>
+                <p>
+                    To update branches locally in theterminal:<span class="code"></span>
+                        git fetch origin
+                    </span>
+                </p>
             </div>
 
             <!-- 2022-11-22 -->
