--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         are attached to the project board automatically.
                     </p>
                     <div class="example">
-                        <!-- <p>Possible Issues in GitHub could be:</p>
+                        <p>Possible Issues in GitHub could be:</p>
                         <ol>
                             <li>README</li>
                             <li>Images</li>
@@ -94,7 +94,7 @@
                             <li>Main layout</li>
                             <li>Header</li>
                             <li>Main content</li>
-                        </ol> -->
+                        </ol>
                     </div>
                     <p>
                         Common brach structure:
