--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                     </p>
                     <p>
                         PROJECT board should be created beforehand ISSUES so that issues
-                        are attached to the project board automatically.
+                        are attached to the project board automatically. Issues should be
+                        listed on the board according to priority. Applying AGILE
+                        principles.
                     </p>
                     <div class="example">
                         <p>Possible Issues in GitHub could be:</p>
@@ -101,7 +103,7 @@
                         <strong>master -- develop -- issue</strong> .
                     </p>
                     <p>
-                        To update branches locally in theterminal:<span class="code">
+                        To update branches locally in the terminal:<span class="code">
                             git fetch origin
                         </span>
                     </p>
@@ -129,31 +131,56 @@
                         ), you will have to delete it on
                         <span class="tech">GitHub Desktop</span> anyway. Connecting issue
                         to a branch: in commit message add issue number (e.g.#2).
+                    </p>
 
+                    <p>
+                        <span class="tech">paint.net</span>:
+                        <span class="code">Ctrl + i</span> - invert selection.
+                    </p>
+                    <p>
+                        <span class="tech">paint.net</span>:
+                        <span class="code">Ctrl + Shift + i</span> - crops to selection.
+                    </p>
+                    <p>
+                        To link favicon in VS code use shortcut
+                        <span class="code">link:favicon</span>.
                         <a href="https://realfavicongenerator.net/" target="_blank"
-                            >Favicon generator link
-                        </a>
-                        <span class="code">Ctrl + i</span> - invert selection in
-                        <span class="tech">paint.net</span> <br />
+                            >Favicon generator link </a
+                        >.
+                        <br />
+                        - copy code from the favicon generator website <br />
+                        - paste it in html file <br />
+                        - save generated favicon folder in the project <br />
+                        - extract files <br />
+                        - rename folder to 'favicon'<br />
+                        - put <strong>favicon.ico</strong> file in the main folder <br />
+                        - make path changes to favicon folder in the copied code.
+                    </p>
 
+                    <p>
                         <span class="tech"> CSS</span>:
                         <span class="code"> margin: calc((100% - elWpx) / 2)</span>
-                        centers element. <br />
+                        centers element.
+                    </p>
+                    <p>
                         <span class="tech"> CSS</span>:
-                        <span class="code"> selector:first-child {} </span> selects
+                        <span class="code"> selector:first-child { } </span> selects
                         element that is the first child of its parent. <br />
+                    </p>
+                    <p>
                         <span class="tech"> CSS</span>:
                         <span class="code"> element>element </span> selects all elements
                         where the parent is the first element. <br />
+                    </p>
 
-                        <!-- <div><span class="code">margin: calc((100% - ElWidthpx) / 2)</span> center element</div>  -->
-                        <br />
+                    <p>
                         Homework readings:
                         <a
                             href=" https://www.w3schools.com/csSref/css_selectors.php"
                             target="_blank"
                             >CSS selectors
                         </a>
+                        .
                     </p>
                 </div>
                 <!-- 2022-11-23 -->
