--- a/index.html
+++ b/index.html
@@ -156,7 +156,14 @@
                         - put <strong>favicon.ico</strong> file in the main folder <br />
                         - make path changes to favicon folder in the copied code.
                     </p>
-
+                    <p>
+                        When only <strong>floating elements</strong> are included in a
+                        <strong>block element</strong>, block element (i.e. parent
+                        element) has no height, therefore parent's display should be
+                        changed to <span class="code">inline-block</span>. <br />
+                        <span class="code">margin: 0 auto</span> works for
+                        <strong>block elements</strong> only.
+                    </p>
                     <p>
                         <span class="tech"> CSS</span>:
                         <span class="code"> margin: calc((100% - elWpx) / 2)</span>
