--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <!-- 2022-11-21 -->
                 <div class="day">
-                    <h2>2022-11-21 - Issues, project tables, branches, favicon</h2>
+                    <h2>2022-11-21 - Issues, project tables, branches</h2>
                     <a
                         href="https://www.youtube.com/watch?v=q3l-gsidBRw"
                         target="_blank"
@@ -111,7 +111,7 @@
 
                 <!-- 2022-11-22 -->
                 <div class="day">
-                    <h2>2022-11-22 - working with branches, issues and design</h2>
+                    <h2>2022-11-22 - favicon, styling</h2>
                     <a
                         href="https://www.youtube.com/watch?v=KCg_lAy1gmU"
                         target="_blank"
