--- a/index.html
+++ b/index.html
@@ -232,6 +232,21 @@
                         other property values in em so that sizing changes proportionally
                         all the time by changing only one value (font-size).
                     </p>
+                    <div class="example">
+                        <p>Example using em:</p>
+                        <ul>
+                            <li>.btn-home {</li>
+                            <li>display: inline-block;</li>
+                            <li>text-decoration: none;</li>
+                            <li>color: white; background-color: #61ae4f;</li>
+                            <li>font-size: 20px;</li>
+                            <li>box-shadow: 0.1em 0.25em 0.6em -0.1em #61ae4f;</li>
+                            <li>margin-top: 0.5em;</li>
+                            <li>padding: 0.5em 1em;</li>
+                            <li>transition: all 0.5s;</li>
+                            <li>}</li>
+                        </ul>
+                    </div>
                     <p>Useful links:</p>
                     <ul>
                         <li>
@@ -249,7 +264,7 @@
                         </li>
                     </ul>
                     <p>
-                        You can find actual font-family font applied by selecting an
+                        You can find actual font applied by the browser by selecting an
                         element and going to Computed styles (bottom line
                         <strong>'Rendered Fonts'</strong> ).
                     </p>
