--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                 href="https://fontawesome.com/v4/get-started/"
                                 >Font Awesome
                             </a>
-                            - only css and font folders needed.
+                            - only css and font folders are needed.
                         </li>
                         <li>
                             <a lass="inline" href="https://github.com/marketplace/imgbot">
