--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <a href="https://github.com/JurgitaE/lesson-notes" target="_blank">
                 Site-Repo
             </a>
-            <a href="https://www.youtube.com/@RimantasBelovas/videos" target="_blank">
+            <a
+                href="https://www.youtube.com/watch?v=pxh4B6LH-5U&list=PLcLHBZr0jPABsCuLBXBpEiOZ12PWM99rr"
+                target="_blank">
                 Class Video
             </a>
         </nav>
@@ -52,7 +54,6 @@
                         Personal Repo for the project
                     </a>
                 </header>
-
                 <!-- 2022-11-21 -->
                 <div class="day">
                     <h2>2022-11-21 - Issues, project tables, branches</h2>
@@ -250,17 +251,13 @@
                     <p>Useful links:</p>
                     <ul>
                         <li>
-                            <a
-                                class="inline"
-                                href="https://fontawesome.com/v4/get-started/"
+                            <a href="https://fontawesome.com/v4/get-started/"
                                 >Font Awesome
                             </a>
                             - only css and font folders are needed.
                         </li>
                         <li>
-                            <a lass="inline" href="https://github.com/marketplace/imgbot">
-                                Imgbot
-                            </a>
+                            <a href="https://github.com/marketplace/imgbot"> Imgbot </a>
                         </li>
                     </ul>
                     <p>
@@ -270,20 +267,24 @@
                     </p>
                 </div>
                 <!-- 2022-11-24 -->
-                <div>
+                <div class="day">
                     <h2>2022-11-24</h2>
-                    <a href="https://www.youtube.com/watch?v=UYpCK1QN06w" target="_blank"
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=UYpCK1QN06w"
+                        target="_blank"
                         >Youtube video part 1
                     </a>
-                    <a href="https://www.youtube.com/watch?v=wZG16b3Ql8s" target="_blank"
+                    <a
+                        class="youtube"
+                        href="https://www.youtube.com/watch?v=wZG16b3Ql8s"
+                        target="_blank"
                         >Youtube video part 2</a
                     >
                     <p>
                         Changing <span class="tech">package.json</span> author and licence
                         defaults:
-                        <a
-                            class="inline"
-                            href="https://jaketrent.com/post/change-default-npm-license/"
+                        <a href="https://jaketrent.com/post/change-default-npm-license/"
                             >Change Default NPM License
                         </a>
                         .
