--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 </div>
                 <!-- 2022-11-23 -->
                 <div class="day">
-                    <h2>2022-11-23 - NAV styling with CSS</h2>
+                    <h2>2022-11-23 - styling, selectors</h2>
                     <a
                         href="https://www.youtube.com/watch?v=Hr40BLgOxGw"
                         target="_blank"
@@ -268,7 +268,7 @@
                 </div>
                 <!-- 2022-11-24 -->
                 <div class="day">
-                    <h2>2022-11-24</h2>
+                    <h2>2022-11-24 - Font Awesome, CSS classes</h2>
                     <a
                         class="youtube"
                         href="https://www.youtube.com/watch?v=UYpCK1QN06w"
