--- a/index.html
+++ b/index.html
@@ -251,10 +251,12 @@
                     <p>Useful links:</p>
                     <ul>
                         <li>
-                            <a href="https://fontawesome.com/v4/get-started/"
-                                >Font Awesome
+                            <a
+                                href="https://fontawesome.com/v4/get-started/"
+                                target="_blank">
+                                Font Awesome
                             </a>
-                            - only css and font folders are needed.
+                            - only <strong>css and font folders</strong> are needed.
                         </li>
                         <li>
                             <a href="https://github.com/marketplace/imgbot"> Imgbot </a>
@@ -279,18 +281,25 @@
                         class="youtube"
                         href="https://www.youtube.com/watch?v=wZG16b3Ql8s"
                         target="_blank"
-                        >Youtube video part 2</a
-                    >
+                        >Youtube video part 2
+                    </a>
                     <p>
                         Changing <span class="tech">package.json</span> author and licence
                         defaults:
-                        <a href="https://jaketrent.com/post/change-default-npm-license/"
-                            >Change Default NPM License
+                        <a
+                            href="https://jaketrent.com/post/change-default-npm-license/"
+                            target="_blank">
+                            Change Default NPM License
                         </a>
                         .
                     </p>
+                    <p>
+                        Usa <strong>class attribute</strong> instead of element selectors
+                        to improve readibility and attach meaning. Moreover, after
+                        changing html structure you won't need to change styling, because
+                        classes remain same.
+                    </p>
                 </div>
-                <p></p>
             </div>
         </main>
     </body>
